# windlass

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  agent.md  debug-mode.md  debug-plan.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.paused.yml  docker-compose.portainer.yml  docker-compose.qbit-integration.yml  docker-compose.test.yml  docker-compose.tunnel.yml  docker-compose.wg-integration.yml  gemini-conversation-2026-04-09-18-39-05.json  gemini-conversation-2026-04-09-20-51-55.json  gemini-conversation-2026-04-10-07-46-46.json  gemini-conversation-2026-04-10-09-31-15.json  justfile  m1-implementation-spec.md  todo.md  web-ui.md  windlass-specification.md
.sqlx/: query-064ebfcda1f00b1d687f8c32f9a11d2b3c3e633b8e24dc15d064b2ea4cf28338.json  query-0af70e75b2d2979a29fc030168a38c577bfdc98f1bf2a9329c85011d6094e4cd.json  query-10fd57ef8872f493aba0eff651de92c5a51d817e0b08ea98e4af55cef924d358.json  query-22008dee55fb85b68f0d73d2768534d7b8f5f6a1f902e6055fccd18b29da9089.json  query-2d8985965d65b2ce1accb295746f9debb7c3e1b4daaad1c55c436c95dd0ca091.json  query-3251d7be0f30aad4ff5074c8fe65ea65e0af9247c2d693e32805e42e2582d948.json  query-3ab9e408e1b6be8a3047f7ede2bbf4801ed32455abb1d21b17b751d81dbb6ac9.json  query-3cb76d22d01cb158841355f88a28b970ee026251d121ddc9cdc144b916953b12.json  query-3fc02429ba80c1667edb5724c5953f2bbbb1f0f3c571fc8468d5d0b8795727bd.json  query-4370eca559c927fe1eea8c289a49d72376df8a9898416b932e8f9dc8e076e7e8.json  query-4440b3840ac2014359b95ffb0f3fcbc3189244b2a167c219096338ab7e3fd227.json  query-4601b390647c970af4d65a77d9329ec315701d4fbf058263a326152da25168da.json  query-4ac5e27578e18625bf6e739c120002477da7ec616df90bba67a8356de3e5934c.json  query-4e50cdbec49c0c6a665d89729c4eb9d4bf30aea2c624c03602ef9cfd5ea6c19c.json  query-4fed7179376b8cab3ffd58d349272cfbfd890bda818714f58b57ee64c5e4cec4.json  query-50918c6bad3fce6c25226c812cd950f7d377c9e2914262dcdb8e61db166d3d19.json  query-55c4b48ebe72167f81bc1aaffc3014f8e12b9989f82821b4429e6d20ae42b9ff.json  query-689e6cceb80a03634d68fc53120aad3e5b84e3e32353a75ba1c2e4b505d78054.json  query-6b2127f8bbf7bd0c916c59c8123bfc05092e2ca4908c51b4cab4151ae39e3a78.json  query-6b5c6048c97e9072852ea1a702873284c2697fbca62700ce3993077cd517cb54.json  query-76c0381aeb84f06c989bf95650bb3635705b2d184af44d6def336c956534c387.json  query-80ad1478db7c3f6e561872b6bd53ccc904347b7441c956cf144a703ab0eb3afb.json  query-8a65b72efcf63216f5d94815e430a9e97a28c29560e13d2a30a618ecb0025829.json  query-90dcb298553b2c93b30be26230b9835470b6346df468b7d5f70dda5de564b4db.json  (+16 more)
app/: index.html  package-lock.json  package.json  (+1 more)
windlass/: Cargo.toml
windlass-clients/: Cargo.toml
windlass-clients/src/: gotify.rs  lib.rs  qbit.rs
windlass-clients/src/mam/: mod.rs
windlass-clients/src/qbit/: client.rs  mod.rs  tests.rs  types.rs  write.rs
windlass-clients/tests/: qbit_integration.rs
windlass-clients/tests/fixtures/: test.torrent
windlass-clients/tests/qbit-image/: Dockerfile  qBittorrent.conf
windlass-core/: Cargo.toml
windlass-core/src/: actions.rs  events.rs  lib.rs  observation.rs  prop_tests.rs  torrent.rs  types.rs
windlass-core/src/handlers/: compliance.rs  download.rs  mam.rs  mod.rs  monitoring.rs  qbit.rs  vpn.rs
windlass-core/src/tests/: compliance.rs  helpers.rs  init.rs  mam.rs  mod.rs  monitoring.rs  qbit.rs  vpn.rs  wakeups.rs
windlass-db/: Cargo.toml
windlass-db-core/: Cargo.toml
windlass-db-core/src/: lib.rs
windlass-db/migrations/: 0001_books.sql  0002_safety_constraints.sql  0002_torrents.sql  0003_download_queue.sql  0004_events.sql  0005_alerts.sql  0006_rename_events_to_activity_log.sql
windlass-db/postgres/migrations/: 0001_initial.sql
windlass-db/src/: activity_log.rs  actor.rs  alerts.rs  books.rs  download_queue.rs  events.rs  lib.rs  torrents.rs
windlass-debug/: Cargo.toml
windlass-debug/src/: causal_tx.rs  dispatcher.rs  history.rs  lib.rs  log_layer.rs  stream.rs  types.rs
windlass-domain-core/: Cargo.toml
windlass-domain-core/src/: lib.rs
windlass-local/: Cargo.toml
windlass-local/src/: docker.rs  docker_tests.rs  lib.rs  monitors.rs  vpn_files.rs
windlass-machine/: Cargo.toml
windlass-machine/src/: causal.rs  lib.rs  machine.rs  pubsub.rs  runtime.rs  shell.rs  tap.rs  timers.rs
windlass-net/: Cargo.toml
windlass-net/src/: command.rs  handshake.rs  lib.rs  natpmp.rs  probe.rs  shell.rs
windlass-net/tests/: wg_integration.rs
windlass-observability/: Cargo.toml
windlass-observability/src/: lib.rs  log_layer.rs  pause_on_start.rs  ring.rs  sse.rs  stored.rs
windlass-observability/tests/: acceptance.rs  hello_serialize.rs
windlass-observability/tests/common/: d1_recording_tap.rs  d2_d3_stalling_panicking.rs  d8_fanout_bridge.rs  mod.rs  support.rs
windlass-qbit-core/: Cargo.toml
windlass-qbit-core/src/: lib.rs
windlass-testkit/: Cargo.toml  Dockerfile
windlass-testkit/src/: chaos.rs  gluetun.rs  lib.rs  main.rs  mam.rs  scenarios.rs  wiremock_admin.rs
windlass-testkit/tests/: mam_drift.rs
windlass-testkit/wg-runner/: Dockerfile
windlass-testkit/wg-server/: Dockerfile  entrypoint.sh  services.py
windlass-tunnel-core/: Cargo.toml
windlass-tunnel-core/src/: config.rs  lib.rs  machine.rs  natpmp.rs
windlass-types/: Cargo.toml
windlass-types/src/: lib.rs
windlass-web/: Cargo.toml
windlass-web/src/: app_state.rs  frontend.rs  lib.rs  test_helpers.rs
windlass-web/src/routes/: activity_log.rs  alerts.rs  debug.rs  download.rs  download_queue.rs  events.rs  health.rs  mod.rs  observability.rs  operator.rs  stream.rs  torrents.rs
windlass/src/: main.rs
windlass/src/shell/: actions.rs  compliance.rs  config.rs  db_shell.rs  dequeue.rs  disk_shell.rs  docker_shell.rs  domain_shell.rs  download.rs  init.rs  mam_shell.rs  mod.rs  qbit_shell.rs  service.rs  service_db.rs  service_debug.rs  service_events.rs  service_legacy.rs  shadow.rs  tunnel_bridge.rs  vpn_shell.rs
windlass/tests/: integration.rs  integration_contracts.rs  integration_support.rs
windlass/tests/support/: docker.rs  mam.rs  mod.rs  qbit.rs  reset.rs
(+92 files in other folders)
