[workspace]
resolver = "2"
members = [
    "windlass-types",
    "windlass-core",
    "windlass-local",
    "windlass-clients",
    "windlass-web",
    "windlass",
]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["json", "cookies"] }
bollard      = "0.18"
notify-debouncer-mini = "0.6"
nutype       = { version = "0.6", features = ["serde"] }
secrecy      = { version = "0.10", features = ["serde"] }
uom          = { version = "0.36", features = ["f64", "si"] }
anyhow       = "1"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
libc         = "0.2"
proptest     = "1"
wiremock     = "0.6"
tempfile     = "3"
axum             = { version = "0.8", features = ["json"] }
windlass-types   = { path = "windlass-types" }
windlass-core    = { path = "windlass-core" }
windlass-local   = { path = "windlass-local" }
windlass-clients = { path = "windlass-clients" }
windlass-web     = { path = "windlass-web" }

