[workspace]
resolver = "2"
members = [
    "windlass-machine",
    "windlass-observability",
    "windlass-mam-core",
    "windlass-types",
    "windlass-core",
    "windlass-disk-core",
    "windlass-docker-core",
    "windlass-domain-core",
    "windlass-debug",
    "windlass-db-core",
    "windlass-qbit-core",
    "windlass-vpn-core",
    "windlass-local",
    "windlass-clients",
    "windlass-web",
    "windlass",
    "windlass-testkit",
    "windlass-db",
]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "multipart"] }
bollard      = "0.18"
notify-debouncer-mini = "0.6"
nutype       = { version = "0.6", features = ["serde"] }
secrecy      = { version = "0.10", features = ["serde"] }
uom          = { version = "0.36", features = ["f64", "si"] }
anyhow       = "1"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
libc         = "0.2"
chrono       = { version = "0.4", features = ["serde"] }
proptest     = "1"
wiremock     = "0.6"
tempfile     = "3"
rust-embed  = { version = "8", features = ["axum"] }
mime_guess  = "2"
axum             = { version = "0.8", features = ["json"] }
tower-http       = { version = "0.6", features = ["cors"] }
arc-swap         = "1"
uuid             = { version = "1", features = ["v4", "serde"] }
sqlx             = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "migrate", "macros"] }
windlass-debug   = { path = "windlass-debug" }
windlass-db-core = { path = "windlass-db-core" }
windlass-disk-core = { path = "windlass-disk-core" }
windlass-docker-core = { path = "windlass-docker-core" }
windlass-domain-core = { path = "windlass-domain-core" }
windlass-mam-core = { path = "windlass-mam-core" }
windlass-machine = { path = "windlass-machine" }
windlass-observability = { path = "windlass-observability" }
async-trait      = "0.1"
windlass-qbit-core = { path = "windlass-qbit-core" }
windlass-types   = { path = "windlass-types" }
windlass-vpn-core = { path = "windlass-vpn-core" }
windlass-core    = { path = "windlass-core" }
windlass-local   = { path = "windlass-local" }
windlass-clients = { path = "windlass-clients" }
windlass-web     = { path = "windlass-web" }
windlass-db      = { path = "windlass-db" }
