[package]
name = "windlass-clients"
version = "0.1.0"
edition = "2024"

[dependencies]
windlass-types = { workspace = true }
chrono         = { workspace = true }
reqwest        = { workspace = true }
secrecy        = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }
tokio    = { workspace = true }
