[package]
name = "windlass-core"
version = "0.1.0"
edition = "2024"

[dependencies]
windlass-types = { workspace = true }
chrono         = { workspace = true }
tracing        = { workspace = true }
uom            = { workspace = true }
serde          = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
