[package]
name = "windlass-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx           = { workspace = true }
windlass-types = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
chrono         = { workspace = true }
thiserror      = { workspace = true }
serde_json     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
