[package]
name = "windlass-debug"
version = "0.1.0"
edition = "2024"

[dependencies]
windlass-core = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
arc-swap      = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
