[package]
name = "windlass-machine"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap    = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
