[package]
name = "windlass-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait      = { workspace = true }
arc-swap         = { workspace = true }
chrono           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
uuid             = { workspace = true }
windlass-machine = { workspace = true }
windlass-types   = { workspace = true }
