[package]
name = "windlass-qbit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono           = { workspace = true }
serde            = { workspace = true }
windlass-machine = { workspace = true }
windlass-types   = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }
