[package]
name = "windlass-testkit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "windlass-testkit"
path = "src/main.rs"

[dependencies]
tokio    = { workspace = true }
axum     = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
reqwest  = { workspace = true }
bollard  = { workspace = true }
anyhow   = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber = { workspace = true }
