[package]
name = "windlass-types"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono   = { workspace = true }
nutype   = { workspace = true }
secrecy  = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
uom      = { workspace = true }

[dev-dependencies]
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
