[package]
name = "windlass-web"
version = "0.1.0"
edition = "2024"

[dependencies]
windlass-types = { workspace = true }
windlass-core  = { workspace = true }
axum           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
