[package]
name = "windlass-web"
version = "0.1.0"
edition = "2024"

[dependencies]
windlass-types = { workspace = true }
windlass-core  = { workspace = true }
windlass-debug = { workspace = true }
arc-swap       = { workspace = true }
axum           = { workspace = true }
chrono         = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
futures-util   = { workspace = true }
tokio-stream   = { workspace = true, features = ["sync"] }
rust-embed     = { workspace = true }
mime_guess     = { workspace = true }
uuid           = { workspace = true }
