[package]
name = "windlass"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "windlass"
path = "src/main.rs"

[dependencies]
windlass-db      = { workspace = true }
windlass-db-core = { workspace = true }
windlass-disk-core = { workspace = true }
windlass-docker-core = { workspace = true }
windlass-domain-core = { workspace = true }
windlass-machine = { workspace = true }
windlass-mam-core = { workspace = true }
windlass-qbit-core = { workspace = true }
windlass-vpn-core = { workspace = true }
sqlx             = { workspace = true }
arc-swap         = { workspace = true }
windlass-types   = { workspace = true }
windlass-core    = { workspace = true }
windlass-debug   = { workspace = true }
windlass-local   = { workspace = true }
windlass-clients = { workspace = true }
windlass-web     = { workspace = true }
axum             = { workspace = true }
bollard          = { workspace = true }
chrono           = { workspace = true }
futures-util     = { workspace = true }
tokio            = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
secrecy          = { workspace = true }
reqwest          = { workspace = true }
uom              = { workspace = true }
uuid             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
